--- a/View/ViewPageDisplay2.xaml
+++ b/View/ViewPageDisplay2.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MVVM_PagesNavigation.View.ViewPageDisplay"
+﻿<Page x:Class="MVVM_PagesNavigation.View.ViewPageDisplay2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,10 @@
       xmlns:local="clr-namespace:MVVM_PagesNavigation.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ViewPageDisplay">
+      Title="ViewPageDisplay2">
 
-    <Grid Background="Aqua">
-        <Button Content="Page 2"
+    <Grid Background="Black">
+        <Button Content="Page 1"
                 Width="200"
                 Height="50"/>
     </Grid>
