--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -4,14 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM_PagesNavigation"
-        xmlns:vm="clr-namespace:MVVM_PagesNavigation.ViewModel"        
+        xmlns:frm="clr-namespace:MVVM_PagesNavigation.Infrastact"
+        xmlns:vm="clr-namespace:MVVM_PagesNavigation.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <vm:ViewModelMainWindow/>
     </Window.DataContext>
     <DockPanel LastChildFill="True">
-        <Frame Content="{Binding CurrentPage}"
+        <Frame Content="{Binding GetPage}"
                Opacity="1"/>
     </DockPanel>
 </Window>
